--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -50,7 +50,7 @@
                         </ul>
                     {% else %}
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class="btn margin-0 loginButton"{% if app.request.get('_route') != 'homepage' %}href="{{  path('login') }}"{% endif %}>Log in</a></li>
+                            <li><a class="btn margin-0 loginButton"{% if app.request.get('_route') != 'homepage' %}href=""{% endif %}>Log in</a></li>
                             <li><a class="btn margin-0 registerButton" {% if app.request.get('_route') != 'homepage' %}href="{{  path('register') }}"{% endif %}>Sign up</a></li>
                         </ul>
                     {% endif %}
