--- a/src/AppBundle/Resources/views/TestPages/results.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/results.html.twig
@@ -36,7 +36,7 @@
                         </h4>
                     </div>
                     {% endif %}
-
+                    <input type="button" id="reportBtn" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#questionReport" value="Invalid question">
                     {{ form_start(form) }}
                     {{ index ~ '.'}}{{ current.content|replace({ "<pre>" : "<pre><code class='language-php'><xmp>" ,
                     "</pre>" : "</xmp></code></pre>" })|raw }}
@@ -85,6 +85,7 @@
                         {{ form_widget(form.previous, {'attr': {'class': 'btn btn-3'}}) }} &nbsp;
                         {{ form_widget(form.next, {'attr': {'class': 'btn btn-3'}}) }} <br>
                     </div>
+                    {{ form_end(form) }}
 
                     {% if app.session.get('isCorrect')[current.id] is not defined or not app.session.get('isCorrect')[current.id] %}
                         <p>Your choice is incorrect.</p>
@@ -99,4 +100,32 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="questionReport" tabindex="-1" role="dialog" aria-labelledby="Report this question" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-danger">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Report this question</h4>
+                </div>
+                {% if app.user %}
+                    {{ render(controller('AppBundle:Test:questionReport', {'allow' : true})) }}
+                {% else %}
+                    <div class="modal-body">
+                        <h3>Only registered users can use this!</h3>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        reportQuestion($("form[name='question_report']"), '{{ path('report') }}', '{{ current.id }}');
+    </script>
 {% endblock %}
