--- a/src/AppBundle/Resources/views/Home/user.html.twig
+++ b/src/AppBundle/Resources/views/Home/user.html.twig
@@ -4,12 +4,48 @@
 
 {% block stylesheets %}
     {{ parent() }}
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', {packages: ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        function drawChart() {
+            // Define the chart to be drawn.
+            var data = google.visualization.arrayToDataTable([
+                ['Name', 'A', 'B'],
+                ['1', 78, 100],
+                ['2', 21, 0],
+                ['3', 91, 0]
+
+            ]);
+            var options = {'title':'How Much Pizza I Ate Last Night',
+                'height':300,
+                legend: { position: 'bottom' }
+            };
+            // Instantiate and draw the chart.
+            var chart = new google.visualization.LineChart(document.getElementById('myPieChart'));
+            chart.draw(data, options);
+        }
+    </script>
 {% endblock %}
 
 {% block body %}
     <div class="sand-background">
         <div class="container">
             <h1>Hello, {{ app.user.name }}</h1>
+            <div id="data"></div>
         </div>
+        <div id="myPieChart"></div>
+
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script type="text/javascript">
+        $( document ).ready(function() {
+            dataCharts('{{ path('user-data') }}', $('#data'));
+        });
+    </script>
 {% endblock %}
