--- a/src/AppBundle/Resources/views/Home/user.html.twig
+++ b/src/AppBundle/Resources/views/Home/user.html.twig
@@ -12,18 +12,21 @@
         function drawChart() {
             // Define the chart to be drawn.
             var data = google.visualization.arrayToDataTable([
-                ['Name', 'A', 'B'],
-                ['1', 78, 100],
-                ['2', 21, 0],
-                ['3', 91, 0]
-
+                ['Test', 'Results', { role: 'style' } ],
+                ['2010', 10, 'color: gray'],
+                ['2020', 14, 'color: #76A7FA'],
+                ['2030', 16, 'opacity: 0.2'],
+                ['2040', 22, 'stroke-color: #703593; stroke-width: 4; fill-color: #C5A5CF'],
+                ['2050', 28, 'stroke-color: #871B47; stroke-opacity: 0.6; stroke-width: 8; fill-color: #BC5679; fill-opacity: 0.2']
             ]);
-            var options = {'title':'How Much Pizza I Ate Last Night',
+            var options = {'title':'Test results',
                 'height':300,
+                'width':400,
+                bar: {groupWidth: "95%"},
                 legend: { position: 'bottom' }
             };
             // Instantiate and draw the chart.
-            var chart = new google.visualization.LineChart(document.getElementById('myPieChart'));
+            var chart = new google.visualization.ColumnChart(document.getElementById('myPieChart'));
             chart.draw(data, options);
         }
     </script>
