--- a/src/AppBundle/Resources/views/Home/user.html.twig
+++ b/src/AppBundle/Resources/views/Home/user.html.twig
@@ -52,7 +52,7 @@
                                 title: '% results'
                             },
                             bar: {groupWidth: "90%"},
-                            legend: { 'legend':'left' }
+                            legend: { position:"none"}
                         };
 
                         var chart = new google.visualization.ColumnChart(
