user can now remove/edit his reports and questions

--- a/src/AppBundle/Resources/views/Questions/myQuestions.html.twig
+++ b/src/AppBundle/Resources/views/Questions/myQuestions.html.twig
@@ -23,5 +23,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-
+<script>
+    deleteRecord('{{ path('delete') }}', 'Question');
+</script>
 {% endblock %}
