--- a/src/AppBundle/Resources/views/Home/leaderboard.html.twig
+++ b/src/AppBundle/Resources/views/Home/leaderboard.html.twig
@@ -9,88 +9,125 @@
 
 {% block body %}
    <div class="container">
-       {% if maxPages > 1 %}
-           <ul class="pagination pagination-sm">
+       {#{% if maxPages > 1 %}#}
+           {#<ul class="pagination pagination-sm">#}
                {# `«` arrow  #}
-               <li {{ thisPage == 1 ? 'class="disabled"' }}>
-                   <a href="{{ path('leaderboard', {
-                       page: thisPage-1 < 1 ? 1 : thisPage-1,
-                       order: app.request.get('order'),
-                       direction: app.request.get('direction')}) }}">«</a>
-               </li>
+               {#<li {{ thisPage == 1 ? 'class="disabled"' }}>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#page: thisPage-1 < 1 ? 1 : thisPage-1,#}
+                       {#order: app.request.get('order'),#}
+                       {#direction: app.request.get('direction')}) }}">«</a>#}
+               {#</li>#}
 
                {# Render each page number #}
-               {% for i in 1..maxPages %}
-                   {% if i - 6 < thisPage and i + 6 > thisPage %}
-                   <li {{ thisPage == i ? 'class="active"' }}>
-                       <a href="{{ path('leaderboard', {
-                           page: i,
-                           order: app.request.get('order'),
-                           direction: app.request.get('direction')}) }}">{{ i }}</a>
-                   </li>
-                    {% endif %}
-               {% endfor %}
+               {#{% for i in 1..maxPages %}#}
+                   {#{% if i - 6 < thisPage and i + 6 > thisPage %}#}
+                   {#<li {{ thisPage == i ? 'class="active"' }}>#}
+                       {#<a href="{{ path('leaderboard', {#}
+                           {#page: i,#}
+                           {#order: app.request.get('order'),#}
+                           {#direction: app.request.get('direction')}) }}">{{ i }}</a>#}
+                   {#</li>#}
+                    {#{% endif %}#}
+               {#{% endfor %}#}
 
                {# `»` arrow #}
-               <li {{ thisPage == maxPages ? 'class="disabled"' }}>
-                   <a href="{{ path('leaderboard', {
-                       page: thisPage+1 <= maxPages ? thisPage+1 : thisPage,
-                       order: app.request.get('order'),
-                       direction: app.request.get('direction') }) }}">»</a>
-               </li>
-           </ul>
-       {% endif %}
-       <div class="row">
-           <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2"><b>Rank</b></div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4"><b>User</b></div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
-               <b>
-                   <a href="{{ path('leaderboard', {
-                       'page' : thisPage,
-                       'order': 'correct' }) }}">
-                       Correct answers
-                   </a>
-               </b>
-           </div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
-               <b>
-                   <a href="{{ path('leaderboard', {
-                       'page' : thisPage,
-                       'order': 'percentage' }) }}">
-                       Correct answer ratio
-                   </a>
-               </b>
-           </div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
-               <b>
-                   <a href="{{ path('leaderboard', {
-                       'page' : thisPage,
-                       'order': 'incorrect',
-                       'direction': 'ASC' }) }}">
-                       Incorrect answers
-                   </a>
-               </b>
-           </div>
-           <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
-               <b>
-                   <a href="{{ path('leaderboard', {
-                       'page' : thisPage,
-                       'order': 'timeSpent' }) }}">
-                       Time spent
-                   </a>
-               </b>
-           </div>
-       </div>
-       {% set rank = 1 * (thisPage - 1) * limit %}
-       {% for user in best %}
-           <div class="row">
-               <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">{{ rank + loop.index }}</div>
-               <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.username }}</div>
-               <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.correct }}</div>
-               <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.percentage|number_format(2) ~ '%' }}</div>
-               <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.incorrect }}</div>
-               <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.FormatedTimeSpent }}</div>
-           </div>
-       {% endfor %}
+               {#<li {{ thisPage == maxPages ? 'class="disabled"' }}>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#page: thisPage+1 <= maxPages ? thisPage+1 : thisPage,#}
+                       {#order: app.request.get('order'),#}
+                       {#direction: app.request.get('direction') }) }}">»</a>#}
+               {#</li>#}
+           {#</ul>#}
+       {#{% endif %}#}
+       {#<div class="row">#}
+           {#<div class="col-lg-1 col-md-1 col-sm-1 col-xs-2"><b>Rank</b></div>#}
+           {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4"><b>User</b></div>#}
+           {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">#}
+               {#<b>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#'page' : thisPage,#}
+                       {#'order': 'correct' }) }}">#}
+                       {#Correct answers#}
+                   {#</a>#}
+               {#</b>#}
+           {#</div>#}
+           {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">#}
+               {#<b>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#'page' : thisPage,#}
+                       {#'order': 'percentage' }) }}">#}
+                       {#Correct answer ratio#}
+                   {#</a>#}
+               {#</b>#}
+           {#</div>#}
+           {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">#}
+               {#<b>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#'page' : thisPage,#}
+                       {#'order': 'incorrect',#}
+                       {#'direction': 'ASC' }) }}">#}
+                       {#Incorrect answers#}
+                   {#</a>#}
+               {#</b>#}
+           {#</div>#}
+           {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">#}
+               {#<b>#}
+                   {#<a href="{{ path('leaderboard', {#}
+                       {#'page' : thisPage,#}
+                       {#'order': 'timeSpent' }) }}">#}
+                       {#Time spent#}
+                   {#</a>#}
+               {#</b>#}
+           {#</div>#}
+       {#</div>#}
+       {#{% set rank = 1 * (thisPage - 1) * limit %}#}
+       {#{% for user in best %}#}
+           {#<div class="row">#}
+               {#<div class="col-lg-1 col-md-1 col-sm-1 col-xs-2">{{ rank + loop.index }}</div>#}
+               {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.username }}</div>#}
+               {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.correct }}</div>#}
+               {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.percentage|number_format(2) ~ '%' }}</div>#}
+               {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.incorrect }}</div>#}
+               {#<div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">{{ user.FormatedTimeSpent }}</div>#}
+           {#</div>#}
+       {#{% endfor %}#}
+       <table id="leaderboard">
+           <thead>
+           <tr>
+               <th width="14%">Avatar</th>
+               <th width="14%">Name</th>
+               <th width="14%">Correct answers</th>
+               <th width="14%">Incorrect answers</th>
+               <th width="14%">Tests Taken</th>
+               <th width="14%">Correct ratio</th>
+               <th width="14%">Time spent</th>
+           </tr>
+           </thead>
+           <tbody>
+           <tr>
+               <td colspan="3" class="dataTables_empty">Loading data from server</td>
+           </tr>
+           </tbody>
+           <tfoot>
+           <tr>
+               <th width="14%">Avatar</th>
+               <th width="14%">Name</th>
+               <th width="14%">Correct answers</th>
+               <th width="14%">Incorrect answers</th>
+               <th width="14%">Tests Taken</th>
+               <th width="14%">Correct ratio</th>
+               <th width="14%">Time spent</th>
+           </tr>
+           </tfoot>
+       </table>
+       </table>
    </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        leaderboard('{{ path('leaderboard') }}', $('#leaderboard'));
+    </script>
 {% endblock %}
