--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -21,7 +21,7 @@
 
                 <div class="row bungeeS">
                     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 allignCenter">
-                        <a href="{{ path('quick_test') }}" class="btn btn-1 btn-1e boldS">Zend test</a>
+                        <a href="{{ path('quick_test') }}" class="btn btn-1 btn-1e boldS">Quick test</a>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 allignCenter">
                         <a href="{{ path('test_options') }}" class="btn btn-1 btn-1e  boldS">
