--- a/src/AppBundle/Resources/views/Home/user.html.twig
+++ b/src/AppBundle/Resources/views/Home/user.html.twig
@@ -46,7 +46,7 @@
                         var options = {
                             title: 'Category results',
                             hAxis: {
-                                title: 'Category'
+                                title: 'Categories'
                             },
                             vAxis: {
                                 title: '% results'
