--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -48,6 +48,7 @@
                                         <li><a href="{{ path('easyadmin') }}">Admin panel</a></li>
                                     {% endif %}
                                     <li><a href="{{ path('user') }}">Statistics</a></li>
+                                    <li><a href="{{ path('messages') }}">New messages<b>({{ app.user.unseenCount }})</b></a></li>
                                     <li><a href="{{ path('keistiDuomenis') }}">Edit profile</a></li>
                                     <li><a href="{{ path('logout') }}">Log out</a></li>
                                 </ul>
