--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand latoS" href="/">
-                    <img src="{{ asset('images/php.png') }}" alt="Logo!" width="50px" align="left"/> &nbsp { testify }
+                   { testify }
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
