--- a/src/AppBundle/Resources/views/TestPages/question.html.twig
+++ b/src/AppBundle/Resources/views/TestPages/question.html.twig
@@ -3,10 +3,8 @@
 {% set charArray = {1 : 'A', 2 : 'B', 3 : 'C', 4 : 'D', 5 : 'E', 6 : 'F', 7 : 'G'} %}
 
 {% block body %}
-    <div class="black-background orange-text">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12">
+    <div id="headerwrap">
+        <div class="container min-height-100">
                     {% for group in app.session.get('questionGroups') %}
                         {% if not group[0].book.title %}
                             <b><h3>{{ loop.index ~ '. PHP Test' }}</h3></b>
@@ -78,7 +76,7 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
     {% endif %}
-            </div>
+
         </div>
     </div>
 {% endblock %}
