--- a/src/AppBundle/Resources/views/Questions/myQuestions.html.twig
+++ b/src/AppBundle/Resources/views/Questions/myQuestions.html.twig
@@ -7,41 +7,69 @@
 {% endblock %}
 
 {% block body %}
-    {% if questions %}
-<table>
-    {% for question in questions %}
-        <tr>
-            <td>{{ question.title }}</td>
-            <td>{{ question.book }}</td>
-            <td>{{ question.createdAt|date('Y/m/d H:i:s') }}</td>
-            <td>{{ question.updatedAt|date('Y/m/d H:i:s') }}</td>
-            <td>{{ question.status }}</td>
-            <td>
+    <div class="container">
+        <ul class="pagination pagination-sm">
+            {# `«` arrow  #}
+            <li {{ thisPage == 1 ? 'class="disabled"' }}>
+                <a href="{{ path('myQuestions', {page: thisPage-1 < 1 ? 1 : thisPage-1}) }}">«</a>
+            </li>
+
+            {# Render each page number #}
+            {% for i in 1..maxPages %}
+                {% if i - 6 < thisPage and i + 6 > thisPage %}
+                    <li {{ thisPage == i ? 'class="active"' }}>
+                        <a href="{{ path('myQuestions', {page: i}) }}">{{ i }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+
+            {# `»` arrow #}
+            <li {{ thisPage == maxPages ? 'class="disabled"' }}>
+                <a href="{{ path('myQuestions', { page: thisPage+1 <= maxPages ? thisPage+1 : thisPage }) }}">»</a>
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><b>Title</b></div>
+            <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><b>Category</b></div>
+            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6"><b>Created</b></div>
+            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6"><b>Last updated</b></div>
+            <div class="col-lg-3 col-md-2 col-sm-4 col-xs-6"><b>Status</b></div>
+        </div>
+        {% if questions.count > 0 %}
+        {% for question in questions %}
+        <div class="row">
+            <div class="col-lg-3 col-md-2 col-sm-4 col-xs-6">{{ question.title }}</div>
+            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">{{ question.book }}</div>
+            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">{{ question.createdAt|date('Y/m/d H:i:s') }}</div>
+            <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">{{ question.updatedAt|date('Y/m/d H:i:s') }}</div>
+            <div class="col-lg-1 col-md-2 col-sm-4 col-xs-6">{{ question.status }}</div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
                 <button type="button" data-toggle="modal" data-target="#removeModal" class="btn btn-danger removeBtn"
                         data-id="{{ question.id }}" data-name="{{ question.title }}">Remove</button>
-            </td>
-            <td><a href="{{ path('editQuestion',{id: question.id, slug: question.slugify}) }}">Edit</a></td>
-        </tr>
-    {% endfor %}
-</table>
-{% else %}
-<div><h3>You haven't submitted any question suggestions.</h3></div>
-{% endif %}
-    <div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete this question?</h4>
-                </div>
-                <div class="modal-body">
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3"><a href="{{ path('editQuestion',{id: question.id, slug: question.slugify}) }}">Edit</a></div>
+        </div>
+            {% endfor %}
+            {% else %}
+                <div class="col-lg-12">You haven't submitted any questions.</div>
+            {% endif %}
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" id="delete" class="btn btn-danger">Delete</button>
+        <div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete this question?</h4>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" id="delete" class="btn btn-danger">Delete</button>
+                    </div>
                 </div>
             </div>
         </div>
