--- a/src/AppBundle/Resources/views/Questions/myReports.html.twig
+++ b/src/AppBundle/Resources/views/Questions/myReports.html.twig
@@ -7,40 +7,63 @@
 {% endblock %}
 
 {% block body %}
-    {% if reports %}
-<table>
-    {% for report in reports %}
-        <tr>
-            {#<td><a href="{{ path('editReport',{id: report.id}) }}">{{ report.questionId }}</a></td>#}
-            <td>{{ report.reason }}</td>
-            <td>{{ report.createdAt|date('Y/m/d H:i:s') }}</td>
-            <td>{{ report.updatedAt|date('Y/m/d H:i:s') }}</td>
-            <td>{{ report.status }}</td>
-            <td>
-                <button type="button" data-toggle="modal" data-target="#removeModal" class="btn btn-danger removeBtn"
-                        data-id="{{ report.id }}" data-name="{{ report.reason }}">Remove</button>
-            </td>
-            {#<td><a href="{{ path('editQuestion',{id: question.id, slug: question.slugify}) }}">Edit</a></td>#}
-        </tr>
-    {% endfor %}
-</table>
-{% else %}
-        <div><h3>You haven't submitted any reports.</h3></div>
-{% endif %}
-    <div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete this report?</h4>
+    <div class="container">
+        <ul class="pagination pagination-sm">
+            {# `«` arrow  #}
+            <li {{ thisPage == 1 ? 'class="disabled"' }}>
+                <a href="{{ path('myReports', {page: thisPage-1 < 1 ? 1 : thisPage-1}) }}">«</a>
+            </li>
+
+            {# Render each page number #}
+            {% for i in 1..maxPages %}
+                {% if i - 6 < thisPage and i + 6 > thisPage %}
+                    <li {{ thisPage == i ? 'class="active"' }}>
+                        <a href="{{ path('myReports', {page: i}) }}">{{ i }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+
+            {# `»` arrow #}
+            <li {{ thisPage == maxPages ? 'class="disabled"' }}>
+                <a href="{{ path('myReports', { page: thisPage+1 <= maxPages ? thisPage+1 : thisPage }) }}">»</a>
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><b>Reason</b></div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><b>Updated</b></div>
+            <div class="col-lg-6 col-md-6 col-sm-4 col-xs-6"><b>Status</b></div>
+        </div>
+        {% if reports.count > 0 %}
+        {% for report in reports %}
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">{{ report.reason }}</div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">{{ report.updatedAt|date('Y/m/d H:i:s') }}</div>
+                <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">{{ report.status }}</div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                    <button type="button" data-toggle="modal" data-target="#removeModal" class="btn btn-danger removeBtn"
+                            data-id="{{ report.id }}" data-name="{{ report.reason }}">Remove</button>
                 </div>
-                <div class="modal-body">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" id="delete" class="btn btn-danger">Delete</button>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3"><a href="{{ path('editReport', {id: report.id}) }}">Edit</a></div>
+            {% endfor %}
+            {% else %}
+                <div class="col-lg-12">You haven't submitted any reports.</div>
+            {% endif %}
+        </div>
+        <div class="modal fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete this report?</h4>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" id="delete" class="btn btn-danger">Delete</button>
+                    </div>
                 </div>
             </div>
         </div>
