--- a/src/AppBundle/Resources/views/User/messages.html.twig
+++ b/src/AppBundle/Resources/views/User/messages.html.twig
@@ -35,12 +35,15 @@
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-10"><b>Message</b></div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-2"><b>Received</b></div>
         </div>
+        {% if notifications %}
         {% for message in notifications %}
             <div class="row alert {% if not message.seen %}alert-warning {% endif %}">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-10"><a href="{{ path('viewMessage', { id: message.id, slug: message.slugify }) }}">{{ message.title }}</a></div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-2">{{ message.received|date('Y/m/d H:i:s') }}</div>
             </div>
-
         {% endfor %}
+        {% else %}
+            <div class="col-lg-12">You have no messages.</div>
+        {% endif %}
     </div>
 {% endblock %}
