icons added, header changed

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -8,34 +8,12 @@
 
 {% block body %}
     <body>
-        <div class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#"><b><h1><b>{ testify }</b></h1></b></a>
-                </div>
-            </div>
-        </div>
         <div id="headerwrap">
-            <div class="container min-height-100">
-                <div class="row">
+            <div class="container">
+                <div class="row mt centered">
                     <div class="col-lg-6">
-                        <h3>Get ready<br />
-					for some tests.</h3>
-                        <form class="form-inline" role="form">
-                            <div class="btn-group">
-                                <button type="submit" class="btn btnY btn-8"><a href="{{ asset('quick-test') }}">Quick test</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/1-php-basics">PHP Basics</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/2-functions-and-arrays">Functions and Arrays</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/3-object-oriented-programming">Object Oriented Programming</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/4-security">Security</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/5-data-format-and-types">Data format and Types</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/6-string-and-patterns">String and Patterns</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/7-database-and-sql">Database and SQL</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/8-web-features">Web features</a></button>
-                                <button type="submit" class="btn btnY btn-3"><a href="/category-test/9-input-and-output">INPUT and OUTPUT</a></button>
-                                </ul>
-                            </div>
-                        </form>
+                        <h1>Learn PHP<br />Without any difficulties.</h1>
+                        <h3>Keep up with with with friends and latest features of PHP.</h3>
                     </div>
                     <!-- /col-lg-6 -->
                     <div class="col-lg-6">
@@ -51,7 +29,7 @@
 
         <!-- /headerwrap -->
         <div class="container">
-            <div class="row mt centered">
+            <div class="row centered">
                 <div class="col-lg-6 col-lg-offset-3">
                     <h1>Learn PHP<br />Without any difficulties.</h1>
                     <h3>Keep up with with with friends and latest features of PHP.</h3>
