icons added, header changed,

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}{{ "PHP tests" }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.ico')}}">
+    <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.png')}}">
     {% block stylesheets %}
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,900" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline" rel="stylesheet">
