removing unneccesary files

--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -34,7 +34,7 @@
                     {%  if app.user %}
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="#" class="thumbnail mg10">
+                                <a href="#" class="thumbnail">
                                     <img src="{{ app.user.avatar }}">
                                 </a>
                             </li>
