social icon resized, question layout changed

--- a/src/AppBundle/Resources/style/_basicStyle.scss
+++ b/src/AppBundle/Resources/style/_basicStyle.scss
@@ -200,7 +200,7 @@ body {
 }
 
 .dd66{
-  color: #66dd66;
+  color: white;
   font-size: 20px;
 }
 
@@ -211,11 +211,11 @@ body {
 
 .color-background-text{
   display: inline-block;
-  padding: 5px;
-  margin: 0 0 20px;
+  padding: 2px;
+  margin: 0 0 10px;
 }
 .color-background-text:hover{
-  background-color: yellow;
+  background-color: #c09853;
 }
 
 .margin-0{
@@ -233,4 +233,19 @@ a:hover{
 .mg10 {
   margin-top:10px;
   margin-bottom: 10px;
+}
+
+.black-text{
+  color: black;
+}
+
+#countdown p {
+  display: inline-block;
+  padding: 5px;
+  background: #c09853;
+  margin: 0 0 20px;
+}
+
+label{
+  font-weight: normal !important;
 }
