--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -10,7 +10,7 @@
     <body>
         <div id="headerwrap">
             <div class="container">
-                <div class="row mt centered">
+                <div class="row mt">
                     <div class="col-lg-6">
                         <h1>Learn PHP<br />Without any difficulties.</h1>
                         <h3>Keep up with with with friends and latest features of PHP.</h3>
@@ -29,12 +29,6 @@
 
         <!-- /headerwrap -->
         <div class="container">
-            <div class="row centered">
-                <div class="col-lg-6 col-lg-offset-3">
-                    <h1>Learn PHP<br />Without any difficulties.</h1>
-                    <h3>Keep up with with with friends and latest features of PHP.</h3>
-                </div>
-            </div>
             <!-- /row -->
             <div class="row mt centered">
                 <div class="col-lg-4">
