--- a/src/AppBundle/Resources/style/_alert.scss
+++ b/src/AppBundle/Resources/style/_alert.scss
@@ -7,8 +7,10 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  color: #c09853;
+  color: black;
+  font-weight: 400;
 }
+
 .alert h4 {
   margin: 0;
 }
@@ -57,7 +59,6 @@
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../img/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
