--- a/src/AppBundle/Resources/style/css/main.css
+++ b/src/AppBundle/Resources/style/css/main.css
@@ -25,7 +25,7 @@ body
 h1, h2, h3, h4, h5, h6
 {
     font-family: 'Lato', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     color: #333;
 }
 
@@ -43,7 +43,6 @@ h3
 
 h4
 {
-    color: #95a5a6;
     font-weight: 400;
     font-size: 20px;
 }
@@ -66,7 +65,6 @@ p
 
 a
 {
-    font-size: 20px;
     color: black;
     word-wrap: break-word;
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -142,7 +140,6 @@ i
 	padding-top:10px;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 500px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
@@ -156,11 +153,7 @@ i
     background-size: cover;
 }
 
-#headerwrap h1
-{
-    color: white;
-    font-size: 45px;
-    font-weight: 300;
-    letter-spacing: 1px;
+.orange{
+    color: #FF9900;
 }
 
